--- a/Llm.ipynb
+++ b/Llm.ipynb
@@ -2353,28 +2353,101 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "#TRAINING LOOP"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "def train_model_simple(model, train_loader, val_loader, optimizer, device, num_epochs,\n",
+        "                       eval_freq, eval_iter, start_context, tokenizer):\n",
+        "    # Initialize lists to track losses and tokens seen\n",
+        "    train_losses, val_losses, track_tokens_seen = [], [], []\n",
+        "    tokens_seen, global_step = 0, -1\n",
+        "\n",
+        "    # Main training loop\n",
+        "    for epoch in range(num_epochs):\n",
+        "        model.train()  # Set model to training mode\n",
+        "        \n",
+        "        for input_batch, target_batch in train_loader:\n",
+        "            optimizer.zero_grad() # Reset loss gradients from previous batch iteration\n",
+        "            loss = calc_loss_batch(input_batch, target_batch, model, device)\n",
+        "            loss.backward() # Calculate loss gradients\n",
+        "            optimizer.step() # Update model weights using loss gradients\n",
+        "            tokens_seen += input_batch.numel() # Returns the total number of elements (or tokens) in the input_batch.\n",
+        "            global_step += 1\n",
+        "\n",
+        "            # Optional evaluation step\n",
+        "            if global_step % eval_freq == 0: \n",
+        "                train_loss, val_loss = evaluate_model(\n",
+        "                    model, train_loader, val_loader, device, eval_iter)\n",
+        "                train_losses.append(train_loss)\n",
+        "                val_losses.append(val_loss)\n",
+        "                track_tokens_seen.append(tokens_seen)\n",
+        "                print(f\"Ep {epoch+1} (Step {global_step:06d}): \"\n",
+        "                      f\"Train loss {train_loss:.3f}, Val loss {val_loss:.3f}\")\n",
+        "\n",
+        "        # Print a sample text after each epoch\n",
+        "        generate_and_print_sample(\n",
+        "            model, tokenizer, device, start_context\n",
+        "        )\n",
+        "\n",
+        "    return train_losses, val_losses, track_tokens_seen\n",
+        "                  \n",
+        "\n",
+        "    "
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "def evaluate_model(model, train_loader, val_loader, device, eval_iter):\n",
+        "    model.eval()\n",
+        "    with torch.no_grad():\n",
+        "        train_loss = calc_loss_loader(train_loader, model, device, num_batches=eval_iter)\n",
+        "        val_loss = calc_loss_loader(val_loader, model, device, num_batches=eval_iter)\n",
+        "    model.train()\n",
+        "    return train_loss, val_loss"
+      ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "def generate_and_print_sample(model, tokenizer, device, start_context):\n",
+        "    model.eval()   # Put model in evaluation mode (disables dropout, batchnorm updates etc.)\n",
+        "\n",
+        "    # Get context length (the maximum number of tokens model can see at once)\n",
+        "    context_size = model.pos_emb.weight.shape[0]\n",
+        "\n",
+        "    # Encode the starting text into token IDs and move them to GPU/CPU\n",
+        "    encoded = text_to_token_ids(start_context, tokenizer).to(device)\n",
+        "\n",
+        "    with torch.no_grad():  # Disable gradient calculation (saves memory + faster inference)\n",
+        "        token_ids = generate_text_simple(\n",
+        "            model=model,\n",
+        "            idx=encoded,               # The encoded starting tokens\n",
+        "            max_new_tokens=50,         # How many tokens to generate after the prompt\n",
+        "            context_size=context_size  # Max length window for the model\n",
+        "        )\n",
+        "\n",
+        "    # Decode the generated token IDs back into human-readable text\n",
+        "    decoded_text = token_ids_to_text(token_ids, tokenizer)\n",
+        "\n",
+        "    # Print the text (replace newlines with spaces for compact output)\n",
+        "    print(decoded_text.replace(\"\\n\", \" \"))\n",
+        "\n",
+        "    model.train()  # Switch back to training mode (important if we call this during training)"
+      ]
     },
     {
       "cell_type": "code",
